force-app/main/default/objects/maps__Folder__c/maps__Folder__c.object-meta.xml
<CustomObject>
    <label>Maps Folder</label>
    <nameField>
        <label>Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>