force-app/main/default/objects/maps__Folder__c/fields/maps__ParentFolder__c.field-meta.xml
<CustomField>
    <fullName>maps__ParentFolder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Folder</label>
    <referenceTo>maps__Folder__c</referenceTo>
    <relationshipLabel>Maps Folders</relationshipLabel>
    <relationshipName>MapsFolders</relationshipName>
    <type>Lookup</type>
</CustomField>