force-app/main/default/objects/maps__Folder__c/fields/maps__ProfileIds__c.field-meta.xml
<CustomField>
    <fullName>maps__ProfileIds__c</fullName>
    <label>Profile Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>