force-app/main/default/objects/maps__Folder__c/fields/maps__RoleId__c.field-meta.xml
<CustomField>
    <fullName>maps__RoleId__c</fullName>
    <label>RoleId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>