force-app/main/default/objects/maps__Folder__c/listViews/maps__All.listView-meta.xml
<ListView>
    <fullName>maps__All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>maps__Order__c</columns>
    <columns>maps__ParentFolder__c</columns>
    <columns>maps__ProfileIds__c</columns>
    <columns>maps__RoleId__c</columns>
    <columns>maps__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>